# amazon-connect-flows-cdk

files/amazon-connect-flows-cdk-pure/: .gitignore  Makefile  PURE_CDK_FILES.md  README.md  SETUP_GUIDE.md  app.py  pyproject.toml  requirements-dev.txt  setup.py
files/amazon-connect-flows-cdk-pure/config/connect_flows/dev/: sales_flows_config.json  support_flows_config.json
files/amazon-connect-flows-cdk-pure/flows/sales/: sales_hold_flow.json  sales_main_flow.json  sales_transfer_flow.json
files/amazon-connect-flows-cdk-pure/flows/support/: support_hold_flow.json  support_main_flow.json  support_transfer_flow.json
files/amazon-connect-flows-cdk-pure/scripts/: validate_configs.py  validate_flows.py
files/amazon-connect-flows-cdk-pure/stacks/: __init__.py  connect_flow_stack.py
files/amazon-connect-flows-cdk-pure/tests/: __init__.py
files/amazon-connect-flows-cdk-pure/tests/unit/: test_config_loader.py  test_connect_flow_stack.py  test_flow_updater.py
files/amazon-connect-flows-cdk-pure/utils/connect_flows/: __init__.py  config_loader.py  flow_updater.py
